--- a/index.html
+++ b/index.html
@@ -205,18 +205,20 @@
     		background-color: white;
     		border: 0;
     		box-shadow: 0 0 5px rgba(0,0,0,.5);
-		    max-width: 100%;
+		    padding: 20px;
+		    white-space: nowrap;
         }
         .tile-image {
-    		max-width: 100%;
-    		height: auto;
+    		border:1px solid rgba(0,0,0, .5);
+    		display:inline-block;
+    		vertical-align: top;
         }
         .tile-info {
-        	background-color: #ededed;
-        	padding: 20px;
-    	    box-shadow: -4px 0px 3px -3px rgba(30,30,30,.4);
+        	padding-left: 20px;
     	    position: relative;
     	    font-size: 14px;
+    	    display:inline-block;
+    	    vertical-align: top;
         }
         .close {
         	position: absolute;
@@ -224,8 +226,8 @@
         	width: 40px;
         	text-align: center;
         	line-height: 40px;
-        	top: 5px;
-        	right: 5px;
+        	top: -5px;
+        	right: -5px;
         	color: inherit;
         	font-size: 22px;
         }
@@ -314,7 +316,7 @@
 	                                			<h3>Beta TicketLiquidator</h3>
 	                                			<span>2018</span>
 	                                		</div>
-	                                		<a class='tile-link' target='_blank' href='beta.ticketliquidator.com'>See the site</a>
+	                                		<a class='tile-link' target='_blank' href='beta.ticketliquidator.com'>View the site</a>
 	                                		<p></p>
 	                                	</article>
                                 	</div>
@@ -329,7 +331,7 @@
 	                                			<h3>NewYorkTheaterTickets</h3>
 	                                			<span>2017</span>
 	                                		</div>
-	                                		<a class='tile-link' target='_blank' href='http://newyorktheatertickets.center'>See the site</a>
+	                                		<a class='tile-link' target='_blank' href='http://newyorktheatertickets.center'>View the site</a>
 	                                		<p>Our CEO requested that I build a site similar in design to the official broadway site.</p>
 	                                	</article>
                                 	</div>
@@ -344,7 +346,7 @@
 	                                			<h3>Rad.Tickets</h3>
 	                                			<span>2017</span>
 	                                		</div>
-	                                		<a class='tile-link' target='_blank' href='https://rad.tickets'>See the site</a>
+	                                		<a class='tile-link' target='_blank' href='https://rad.tickets'>View the site</a>
 	                                		<p></p>
 	                                	</article>
                                 	</div>
@@ -359,7 +361,7 @@
 	                                			<h3>CMS Template Revamp</h3>
 	                                			<span>2017</span>
 	                                		</div>
-	                                		<a class='tile-link' target='_blank' href='http://revamp.showsearch.com'>See the site</a>
+	                                		<a class='tile-link' target='_blank' href='http://revamp.showsearch.com'>View the site</a>
 	                                		<p></p>
 	                                	</article>
                                 	</div>
@@ -374,7 +376,7 @@
 	                                			<h3>EzEvent Tickets</h3>
 	                                			<span>2017</span>
 	                                		</div>
-	                                		<a class='tile-link' target='_blank' href='https://tickets.ezevent.com'>See the site</a>
+	                                		<a class='tile-link' target='_blank' href='https://tickets.ezevent.com'>View the site</a>
 	                                		<p></p>
 	                                	</article>
                                 	</div>
@@ -389,7 +391,7 @@
 	                                			<h3>Wall Street Journal Tickets</h3>
 	                                			<span>2017</span>
 	                                		</div>
-	                                		<a class='tile-link' target='_blank' href='http://wsj.fansupfront.com'>See the site</a>
+	                                		<a class='tile-link' target='_blank' href='http://wsj.fansupfront.com'>View the site</a>
 	                                		<p></p>
 	                                	</article>
                                 	</div>
@@ -404,7 +406,7 @@
 	                                			<h3>OpenTable Ticket Site Demo</h3>
 	                                			<span>2017</span>
 	                                		</div>
-	                                		<a class='tile-link' target='_blank' href='http://opentable.showsearch.com'>See the site</a>
+	                                		<a class='tile-link' target='_blank' href='http://opentable.showsearch.com'>View the site</a>
 	                                		<p></p>
 	                                	</article>
                                 	</div>
@@ -419,7 +421,7 @@
 	                                			<h3>OnBroadway</h3>
 	                                			<span>2016</span>
 	                                		</div>
-	                                		<a class='tile-link' target='_blank' href='http://www.onbroadway.com'>See the site</a>
+	                                		<a class='tile-link' target='_blank' href='http://www.onbroadway.com'>View the site</a>
 	                                		<p></p>
 	                                	</article>
                                 	</div>
@@ -434,7 +436,7 @@
 	                                			<h3>Brian Wilson Ticket Site Demo</h3> 
 	                                			<span>2016</span>
 	                                		</div>
-	                                		<a class='tile-link' target='_blank' href='http://brianwilson.showsearch.com'>See the site</a>
+	                                		<a class='tile-link' target='_blank' href='http://brianwilson.showsearch.com'>View the site</a>
 	                                		<p></p>
 	                                	</article>
                                 	</div>
@@ -449,7 +451,7 @@
 	                                			<h3>TicketNetwork Corporate Site</h3>
 	                                			<span>2015</span>
 	                                		</div>
-	                                		<a class='tile-link' target='_blank' href='https://corporate.ticketnetwork.com'>See the site</a>
+	                                		<a class='tile-link' target='_blank' href='https://corporate.ticketnetwork.com'>View the site</a>
 	                                		<p></p>
 	                                	</article>
                                 	</div>
