--- a/index.html
+++ b/index.html
@@ -219,6 +219,21 @@
     	    display:inline-block;
     	    vertical-align: top;
         }
+        .btn {
+        	display: block;
+        	padding: 6px 12px;
+        	border-radius:4px;
+        	background-color: #14A8D6;
+        	border:1px solid #14A8D6;
+        	transition: .3s background-color ease-in-out;
+        }
+        .btn:hover {
+			background-color: #14A8D6;
+        }
+        .btn:focus,
+        .btn:active {
+			background-color: #14A8D6;
+        }
         .close {
         	position: absolute;
         	height: 40px;
@@ -315,7 +330,7 @@
 	                                			<h3>Beta TicketLiquidator</h3>
 	                                			<span>2018</span>
 	                                		</div>
-	                                		<a class='tile-link' target='_blank' href='beta.ticketliquidator.com'>View the site</a>
+	                                		<a class='tile-link btn' target='_blank' href='beta.ticketliquidator.com'>View the site</a>
 	                                		<p></p>
 	                                	</article>
                                 	</div>
@@ -330,7 +345,7 @@
 	                                			<h3>NewYorkTheaterTickets</h3>
 	                                			<span>2017</span>
 	                                		</div>
-	                                		<a class='tile-link' target='_blank' href='http://newyorktheatertickets.center'>View the site</a>
+	                                		<a class='tile-link btn' target='_blank' href='http://newyorktheatertickets.center'>View the site</a>
 	                                		<p>Our CEO requested that I build a site similar in design to the official broadway site.</p>
 	                                	</article>
                                 	</div>
@@ -345,7 +360,7 @@
 	                                			<h3>Rad.Tickets</h3>
 	                                			<span>2017</span>
 	                                		</div>
-	                                		<a class='tile-link' target='_blank' href='https://rad.tickets'>View the site</a>
+	                                		<a class='tile-link btn' target='_blank' href='https://rad.tickets'>View the site</a>
 	                                		<p></p>
 	                                	</article>
                                 	</div>
@@ -360,7 +375,7 @@
 	                                			<h3>CMS Template Revamp</h3>
 	                                			<span>2017</span>
 	                                		</div>
-	                                		<a class='tile-link' target='_blank' href='http://revamp.showsearch.com'>View the site</a>
+	                                		<a class='tile-link btn' target='_blank' href='http://revamp.showsearch.com'>View the site</a>
 	                                		<p></p>
 	                                	</article>
                                 	</div>
@@ -375,7 +390,7 @@
 	                                			<h3>EzEvent Tickets</h3>
 	                                			<span>2017</span>
 	                                		</div>
-	                                		<a class='tile-link' target='_blank' href='https://tickets.ezevent.com'>View the site</a>
+	                                		<a class='tile-link btn' target='_blank' href='https://tickets.ezevent.com'>View the site</a>
 	                                		<p></p>
 	                                	</article>
                                 	</div>
@@ -390,7 +405,7 @@
 	                                			<h3>Wall Street Journal Tickets</h3>
 	                                			<span>2017</span>
 	                                		</div>
-	                                		<a class='tile-link' target='_blank' href='http://wsj.fansupfront.com'>View the site</a>
+	                                		<a class='tile-link btn' target='_blank' href='http://wsj.fansupfront.com'>View the site</a>
 	                                		<p></p>
 	                                	</article>
                                 	</div>
@@ -405,7 +420,7 @@
 	                                			<h3>OpenTable Ticket Site Demo</h3>
 	                                			<span>2017</span>
 	                                		</div>
-	                                		<a class='tile-link' target='_blank' href='http://opentable.showsearch.com'>View the site</a>
+	                                		<a class='tile-link btn' target='_blank' href='http://opentable.showsearch.com'>View the site</a>
 	                                		<p></p>
 	                                	</article>
                                 	</div>
@@ -420,7 +435,7 @@
 	                                			<h3>OnBroadway</h3>
 	                                			<span>2016</span>
 	                                		</div>
-	                                		<a class='tile-link' target='_blank' href='http://www.onbroadway.com'>View the site</a>
+	                                		<a class='tile-link btn' target='_blank' href='http://www.onbroadway.com'>View the site</a>
 	                                		<p></p>
 	                                	</article>
                                 	</div>
@@ -435,7 +450,7 @@
 	                                			<h3>Brian Wilson Ticket Site Demo</h3> 
 	                                			<span>2016</span>
 	                                		</div>
-	                                		<a class='tile-link' target='_blank' href='http://brianwilson.showsearch.com'>View the site</a>
+	                                		<a class='tile-link btn' target='_blank' href='http://brianwilson.showsearch.com'>View the site</a>
 	                                		<p></p>
 	                                	</article>
                                 	</div>
@@ -450,7 +465,7 @@
 	                                			<h3>TicketNetwork Corporate Site</h3>
 	                                			<span>2015</span>
 	                                		</div>
-	                                		<a class='tile-link' target='_blank' href='https://corporate.ticketnetwork.com'>View the site</a>
+	                                		<a class='tile-link btn' target='_blank' href='https://corporate.ticketnetwork.com'>View the site</a>
 	                                		<p></p>
 	                                	</article>
                                 	</div>
@@ -471,7 +486,7 @@
 	                                			<h3>Ticket Results with Filters</h3>
 	                                			<span>2018</span>
 	                                		</div>
-	                                		<a class='tile-link' target='_blank' href='https://jsfiddle.net/steven_willets/6z3aetug/'>View in JSFiddle</a>
+	                                		<a class='tile-link btn' target='_blank' href='https://jsfiddle.net/steven_willets/6z3aetug/'>View in JSFiddle</a>
 	                                		<p></p>
 	                                	</article>
                                 	</div>
@@ -486,7 +501,7 @@
 	                                			<h3>Ticket Results as Cards</h3>
 	                                			<span>2017</span>
 	                                		</div>
-	                                		<a class='tile-link' target='_blank' href='https://jsfiddle.net/steven_willets/3twx0seL/'>View in JSFiddle</a>
+	                                		<a class='tile-link btn' target='_blank' href='https://jsfiddle.net/steven_willets/3twx0seL/'>View in JSFiddle</a>
 	                                		<p></p>
 	                                	</article>
                                 	</div>
@@ -501,7 +516,7 @@
 	                                			<h3>Ticket Results Mapped to Calendar</h3>
 	                                			<span>2017</span>
 	                                		</div>
-	                                		<a class='tile-link' target='_blank' href='https://jsfiddle.net/steven_willets/d9365oq8/'>View in JSFiddle</a>
+	                                		<a class='tile-link btn' target='_blank' href='https://jsfiddle.net/steven_willets/d9365oq8/'>View in JSFiddle</a>
 	                                		<p></p>
 	                                	</article>
                                 	</div>
@@ -516,7 +531,7 @@
 	                                			<h3>Affiliate Search Widget Builder</h3>
 	                                			<span>2016</span>
 	                                		</div>
-	                                		<a class='tile-link' target='_blank' href='https://jsfiddle.net/steven_willets/xw7sc182/'>View in JSFiddle</a>
+	                                		<a class='tile-link btn' target='_blank' href='https://jsfiddle.net/steven_willets/xw7sc182/'>View in JSFiddle</a>
 	                                		<p></p>
 	                                	</article>
                                 	</div>
