--- a/index.html
+++ b/index.html
@@ -226,6 +226,9 @@
         	background-color: #14A8D6;
         	border:1px solid #14A8D6;
         	transition: .3s background-color ease-in-out;
+        	color: white;
+        	text-align: center;
+        	margin-top: 10px;
         }
         .btn:hover {
 			background-color: #14A8D6;
@@ -477,7 +480,7 @@
                         	<h2 class='content-heading'>JavaScript</h2>
                         	<ul class='tiles'>
                                 <li class='tile inactive'>
-                                	<img class='tile-thumbnail' src="images/filters.png" alt='Ticket Results with Filters' />
+                                	<img class='tile-thumbnail' src="images/filters-thumbnail.png" alt='Ticket Results with Filters' />
                                 	<div class='tile-content'>
 	                                	<img class='tile-image' src="images/filters.png" alt='Ticket Results with Filters' />
 	                                	<article class='tile-info'>
@@ -492,7 +495,7 @@
                                 	</div>
                                 </li>
                                 <li class='tile inactive'>
-                                	<img class='tile-thumbnail' src="images/cards.png" alt='Ticket Results as Cards' />
+                                	<img class='tile-thumbnail' src="images/cards-thumbnail.png" alt='Ticket Results as Cards' />
                                 	<div class='tile-content'>
 	                                	<img class='tile-image' src="images/cards.png" alt='Ticket Results as Cards' />
 	                                	<article class='tile-info'>
@@ -507,7 +510,7 @@
                                 	</div>
                                 </li>
                                 <li class='tile inactive'>
-                                	<img class='tile-thumbnail' src="images/calendar.png" alt='Ticket Results Mapped to Calendar' />
+                                	<img class='tile-thumbnail' src="images/calendar-thumbnail.png" alt='Ticket Results Mapped to Calendar' />
                                 	<div class='tile-content'>
 	                                	<img class='tile-image' src="images/calendar.png" alt='Ticket Results Mapped to Calendar' />
 	                                	<article class='tile-info'>
@@ -522,7 +525,7 @@
                                 	</div>
                                 </li>
                                 <li class='tile inactive'>
-                                	<img class='tile-thumbnail' src="images/widget.png" alt='Affiliate Search Widget Builder' />
+                                	<img class='tile-thumbnail' src="images/widget-thumbnail.png" alt='Affiliate Search Widget Builder' />
                                 	<div class='tile-content'>
 	                                	<img class='tile-image' src="images/widget.png" alt='Affiliate Search Widget Builder' />
 	                                	<article class='tile-info'>
@@ -545,6 +548,7 @@
 
         <footer class="section-wrapper">
             <div class="section-container">
+            	<p>No templates were harmed in the making of this site.</p>
             </div>
         </footer>
 		<div id='overlay'></div>
