--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
 	                                			<h3>Beta TicketLiquidator</h3>
 	                                			<span>2018</span>
 	                                		</div>
-	                                		<a class='tile-link btn' target='_blank' href='beta.ticketliquidator.com'>View the site</a>
+	                                		<a class='tile-link btn' target='_blank' href='beta.ticketliquidator.com'>View Site</a>
 	                                		<p></p>
 	                                	</article>
                                 	</div>
@@ -348,7 +348,7 @@
 	                                			<h3>NewYorkTheaterTickets</h3>
 	                                			<span>2017</span>
 	                                		</div>
-	                                		<a class='tile-link btn' target='_blank' href='http://newyorktheatertickets.center'>View the site</a>
+	                                		<a class='tile-link btn' target='_blank' href='http://newyorktheatertickets.center'>View Site</a>
 	                                		<p>Our CEO requested that I build a site similar in design to the official broadway site.</p>
 	                                	</article>
                                 	</div>
@@ -363,7 +363,7 @@
 	                                			<h3>Rad.Tickets</h3>
 	                                			<span>2017</span>
 	                                		</div>
-	                                		<a class='tile-link btn' target='_blank' href='https://rad.tickets'>View the site</a>
+	                                		<a class='tile-link btn' target='_blank' href='https://rad.tickets'>View Site</a>
 	                                		<p></p>
 	                                	</article>
                                 	</div>
@@ -378,7 +378,7 @@
 	                                			<h3>CMS Template Revamp</h3>
 	                                			<span>2017</span>
 	                                		</div>
-	                                		<a class='tile-link btn' target='_blank' href='http://revamp.showsearch.com'>View the site</a>
+	                                		<a class='tile-link btn' target='_blank' href='http://revamp.showsearch.com'>View Site</a>
 	                                		<p></p>
 	                                	</article>
                                 	</div>
@@ -393,7 +393,7 @@
 	                                			<h3>EzEvent Tickets</h3>
 	                                			<span>2017</span>
 	                                		</div>
-	                                		<a class='tile-link btn' target='_blank' href='https://tickets.ezevent.com'>View the site</a>
+	                                		<a class='tile-link btn' target='_blank' href='https://tickets.ezevent.com'>View Site</a>
 	                                		<p></p>
 	                                	</article>
                                 	</div>
@@ -408,7 +408,7 @@
 	                                			<h3>Wall Street Journal Tickets</h3>
 	                                			<span>2017</span>
 	                                		</div>
-	                                		<a class='tile-link btn' target='_blank' href='http://wsj.fansupfront.com'>View the site</a>
+	                                		<a class='tile-link btn' target='_blank' href='http://wsj.fansupfront.com'>View Site</a>
 	                                		<p></p>
 	                                	</article>
                                 	</div>
@@ -423,7 +423,7 @@
 	                                			<h3>OpenTable Ticket Site Demo</h3>
 	                                			<span>2017</span>
 	                                		</div>
-	                                		<a class='tile-link btn' target='_blank' href='http://opentable.showsearch.com'>View the site</a>
+	                                		<a class='tile-link btn' target='_blank' href='http://opentable.showsearch.com'>View Site</a>
 	                                		<p></p>
 	                                	</article>
                                 	</div>
@@ -438,7 +438,7 @@
 	                                			<h3>OnBroadway</h3>
 	                                			<span>2016</span>
 	                                		</div>
-	                                		<a class='tile-link btn' target='_blank' href='http://www.onbroadway.com'>View the site</a>
+	                                		<a class='tile-link btn' target='_blank' href='http://www.onbroadway.com'>View Site</a>
 	                                		<p></p>
 	                                	</article>
                                 	</div>
@@ -453,7 +453,7 @@
 	                                			<h3>Brian Wilson Ticket Site Demo</h3> 
 	                                			<span>2016</span>
 	                                		</div>
-	                                		<a class='tile-link btn' target='_blank' href='http://brianwilson.showsearch.com'>View the site</a>
+	                                		<a class='tile-link btn' target='_blank' href='http://brianwilson.showsearch.com'>View Site</a>
 	                                		<p></p>
 	                                	</article>
                                 	</div>
@@ -468,7 +468,7 @@
 	                                			<h3>TicketNetwork Corporate Site</h3>
 	                                			<span>2015</span>
 	                                		</div>
-	                                		<a class='tile-link btn' target='_blank' href='https://corporate.ticketnetwork.com'>View the site</a>
+	                                		<a class='tile-link btn' target='_blank' href='https://corporate.ticketnetwork.com'>View Site</a>
 	                                		<p></p>
 	                                	</article>
                                 	</div>
