--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 	                                		<p>
 	                                			Our team manager had me build this site to be a team-run site.
 	                                		</p>
-	                                		<a class='tile-link btn' target='_blank' href='https://rad.tickets'>View Site</a>
+	                                		<a class='tile-link btn' target='_blank' href='https://www.rad.tickets/concerts'>View Site</a>
 	                                	</article>
                                 	</div>
                                 </li>
