--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Krub:400,600|Montserrat:300"> 
-    <link rel="stylesheet" href="/styles/portfolio-main.css">
+    <link rel="stylesheet" href="styles/portfolio-main.css">
     
     <link href="images/favicon.ico" rel="shortcut icon" type="image/x-icon" />
 
@@ -344,6 +344,6 @@
 		<div id='overlay'></div>
     </div>
 
-    <script src="/scripts/portfolio-main.js"></script>
+    <script src="scripts/portfolio-main.js"></script>
 </body>
 </html>
