--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                         	<img class='photo u-photo' src='' alt='Steven Willets'/>
                         	<div class='card-info'>
                         		<h2 class='name p-name'>Steven Willets</h2>
-	                        	<h3 class='position p-job-title'>Jr Front-End Web Developer</h3>
+	                        	<h3 class='position p-job-title'>Front-End Web Developer</h3>
 	                        	<ul class='contact-info'>
 	                        		<li>
 	                        			<span class='contact-address p-adr'> 
