--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 	                                			<span>2018</span>
 	                                		</div>
 	                                		<p>
-	                                			
+	                                			This site was made to be the sister site of another internal site run by our company, <a target='_blank' href='https://www.sonicseats.com/'>SonicSeats.com</a>.  The latter only offers inventory that can be delivered electronically, so ZeroMarkup exists to send customers to whenever the only inventory available is hard-stock.  
 	                                		</p>
 	                                		<a class='tile-link btn' target='_blank' href='zeromarkup.com'>View Site</a>
 	                                	</article>
@@ -107,7 +107,7 @@
 	                                			<span>2017</span>
 	                                		</div>
 	                                		<p>
-	                                			I built this site on request from the CEO for a site that replicated the look of the <a target='_blank' href='https://www.broadway.com/'>official Broadway site</a></p>.
+	                                			The CEO requested that I create a site that replicated the look of the <a target='_blank' href='https://www.broadway.com/'>official Broadway site</a></p>.
 	                                		</p>
 	                                		<a class='tile-link btn' target='_blank' href='http://newyorktheatertickets.center'>View Site</a>
 	                                	</article>
@@ -124,7 +124,7 @@
 	                                			<span>2017</span>
 	                                		</div>
 	                                		<p>
-	                                			Our team manager had me build this site to be a team-run site.
+	                                			Our CTO commissioned this site with the intention that it be run by our engineering department. The idea was to have a friendly competition with the business side of the company that runs our internal sites.
 	                                		</p>
 	                                		<a class='tile-link btn' target='_blank' href='https://www.rad.tickets/concerts'>View Site</a>
 	                                	</article>
