--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1">
 	<meta name="description" content="A porfolio of my work as a front-end developer." />
+    <link rel="canonical" href="https://steven-willets.github.io/" />
     <title>Portfolio - Steven Willets</title>   
     <link href="images/favicon.ico" rel="shortcut icon" type="image/x-icon" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
@@ -77,7 +78,9 @@
                                 <li class='tile inactive'>
                                 	<img class='tile-thumbnail' src="images/zeromarkup-thumbnail.png" alt='ZeroMarkup' />
                                 	<article class='tile-content'>
-	                                	<div class='project-image'><img src="images/zeromarkup.png" alt='ZeroMarkup' /></div>
+	                                	<div class='project-image'>
+                                            <img src="images/zeromarkup.png" alt='ZeroMarkup' />
+                                        </div>
 	                                	<div class='project-info project'>
 	                                		<h3 class='project-title'>Zero Markup</h3>
                                 			<p class='project-date'>2018</p>
@@ -105,7 +108,9 @@
                                 <li class='tile inactive'>
                                 	<img class='tile-thumbnail' src="images/revamp-thumbnail.png" alt='CMS Template Revamp' />
                                 	<article class='tile-content'>
-	                                	<div class='project-image'><img src="images/revamp.png" alt='CMS Template Revamp' /></div>
+	                                	<div class='project-image'>
+                                            <img src="images/revamp.png" alt='CMS Template Revamp' />
+                                        </div>
 	                                	<div class='project-info project'>
 	                                		<h3 class='project-title'>CMS Template Revamp</h3>
                                 			<p class='project-date'>2017</p>
@@ -140,7 +145,9 @@
                                 <li class='tile inactive'>
                                 	<img class='tile-thumbnail' src="images/tickets-ezevent-thumbnail.png" alt='EzEvent Tickets' />
                                 	<article class='tile-content'>
-	                                	<div class='project-image'><img src="images/tickets-ezevent.png" alt='EzEvent Tickets' /></div>
+	                                	<div class='project-image'>
+                                            <img src="images/tickets-ezevent.png" alt='EzEvent Tickets' />
+                                        </div>
 	                                	<div class='project-info project'>
 	                                		<h3 class='project-title'>EzEvent Tickets</h3>
                                 			<p class='project-date'>2017</p>
@@ -154,7 +161,9 @@
                                 <li class='tile inactive'>
                                 	<img class='tile-thumbnail' src="images/wsj-tickets-thumbnail.png" alt='Wall Street Journal Tickets' />
                                 	<article class='tile-content'>
-	                                	<div class='project-image'><img src="images/wsj-tickets.png" alt='Wall Street Journal Tickets' /></div>
+	                                	<div class='project-image'>
+                                            <img src="images/wsj-tickets.png" alt='Wall Street Journal Tickets' />
+                                        </div>
 	                                	<div class='project-info project'>
 	                                		<h3 class='project-title'>Wall Street Journal Tickets</h3>
                                 			<p class='project-date'>2017</p>
@@ -168,7 +177,9 @@
                                 <li class='tile inactive'>
                                 	<img class='tile-thumbnail' src="images/opentable-tickets-thumbnail.png" alt='OpenTable Ticket Site Demo' />
                                 	<article class='tile-content'>
-	                                	<div class='project-image'><img src="images/opentable-tickets.png" alt='OpenTable Ticket Site Demo' /></div>
+	                                	<div class='project-image'>
+                                            <img src="images/opentable-tickets.png" alt='OpenTable Ticket Site Demo' />
+                                        </div>
 	                                	<div class='project-info project'>
 	                                		<h3 class='project-title'>OpenTable Ticket Site Demo</h3>
                                 			<p class='project-date'>2017</p>
@@ -182,7 +193,9 @@
                                 <li class='tile inactive'>
                                 	<img class='tile-thumbnail' src="images/brianwilson-thumbnail.png" alt='Brian Wilson Ticket Site Demo' />
                                 	<article class='tile-content'>
-	                                	<div class='project-image'><img src="images/brianwilson.png" alt='Brian Wilson Ticket Site Demo' /></div>
+	                                	<div class='project-image'>
+                                            <img src="images/brianwilson.png" alt='Brian Wilson Ticket Site Demo' />
+                                        </div>
 	                                	<div class='project-info project'>
 	                                		<h3 class='project-title'>Brian Wilson Ticket Site Demo</h3>
                                 			<p class='project-date'>2016</p>
@@ -196,7 +209,9 @@
                                 <li class='tile inactive'>
                                 	<img class='tile-thumbnail' src="images/corporate-ticketnetwork-thumbnail.png" alt='TicketNetwork Corporate Site' />
                                 	<article class='tile-content'>
-	                                	<div class='project-image'><img src="images/corporate-ticketnetwork.png" alt='TicketNetwork Corporate Site' /></div>
+	                                	<div class='project-image'>
+                                            <img src="images/corporate-ticketnetwork.png" alt='TicketNetwork Corporate Site' />
+                                        </div>
 	                                	<div class='project-info project'>
 	                                		<h3 class='project-title'>TicketNetwork Corporate Site</h3>
                                 			<p class='project-date'>2015</p>
@@ -216,7 +231,9 @@
                                 <li class='tile inactive'>
                                 	<img class='tile-thumbnail' src="images/filters-thumbnail.png" alt='Event Results with Filters' />
                                 	<article class='tile-content'>
-	                                	<div class='project-image'><img class='project-image' src="images/filters.png" alt='Event Results with Filters' /></div>
+	                                	<div class='project-image'>
+                                            <img class='project-image' src="images/filters.png" alt='Event Results with Filters' />
+                                        </div>
 	                                	<div class='project-info project'>
 	                                		<h3 class='project-title'>Event Results with Filters</h3>
                                 			<p class='project-date'>2018</p>
@@ -236,7 +253,9 @@
                                 <li class='tile inactive'>
                                 	<img class='tile-thumbnail' src="images/cards-thumbnail.png" alt='Event Results as Cards' />
                                 	<article class='tile-content'>
-	                                	<div class='project-image'><img src="images/cards.png" alt='Event Results as Cards' /></div>
+	                                	<div class='project-image'>
+                                            <img src="images/cards.png" alt='Event Results as Cards' />
+                                        </div>
 	                                	<div class='project-info project'>
 	                                		<h3 class='project-title'>Event Results as Cards</h3>
                                 			<p class='project-date'>2017</p>
@@ -253,7 +272,9 @@
                                 <li class='tile inactive'>
                                 	<img class='tile-thumbnail' src="images/calendar-thumbnail.png" alt='Event Results Mapped to Calendar' />
                                 	<article class='tile-content'>
-	                                	<div class='project-image'><img src="images/calendar.png" alt='Event Results Mapped to Calendar' /></div>
+	                                	<div class='project-image'>
+                                            <img src="images/calendar.png" alt='Event Results Mapped to Calendar' />
+                                        </div>
 	                                	<div class='project-info project'>
 	                                		<h3 class='project-title'>Event Results Mapped to Calendar</h3>
                                 			<p class='project-date'>2017</p>
@@ -270,7 +291,9 @@
                                 <li class='tile inactive'>
                                 	<img class='tile-thumbnail' src="images/widget-thumbnail.png" alt='Affiliate Search Widget Builder' />
                                 	<article class='tile-content'>
-	                                	<div class='project-image'><img src="images/widget.png" alt='Affiliate Search Widget Builder' /></div>
+	                                	<div class='project-image'>
+                                            <img src="images/widget.png" alt='Affiliate Search Widget Builder' />
+                                        </div>
 	                                	<div class='project-info project'>
 	                                		<h3 class='project-title'>Affiliate Search Widget Builder</h3>
                                 			<p class='project-date'>2016</p>
