--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div id="content-wrapper" class="section-wrapper">
             <div id="content-container" class="section-container cf">
                 <div id="side-content" class='content-section'>
-                    <section>
+                    <section id="contact-info">
                         <article id='business-card' class='h-card'>
                         	<img class='photo u-photo' src='images/steven-willets.png' alt='Steven Willets'/>
                         	<div class='card-info'>
